--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ notifications:
   email: false
 sudo: false
 script:
-  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'Pkg.clone(pwd()); Pkg.test("URIParser", coverage=true)'
+  # - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+  # - julia -e 'Pkg.clone(pwd()); Pkg.test("URIParser", coverage=true)'
 after_success:
   - julia -e 'cd(Pkg.dir("URIParser")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
