--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,13 @@ julia:
   - 0.7
   - 1.0
   - 1.1
+  - 1.2
+  - 1.3
+  - 1.4
   - nightly
 matrix:
   allow_failures:
   - julia: nightly
 notifications:
   email: false
-after_success:
-  - julia -e 'using Pkg; cd(Pkg.dir("URIParser")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
+codecov: true
