--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,15 @@ os:
   - osx
 julia:
   - 0.7
+  - 1.0
+  - 1.1
+  - 1.2
+  - 1.3
+  - 1.4
   - nightly
+matrix:
+  allow_failures:
+  - julia: nightly
 notifications:
   email: false
-sudo: false
-script:
-  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'Pkg.clone(pwd()); Pkg.test("URIParser", coverage=true)'
-after_success:
-  - julia -e 'cd(Pkg.dir("URIParser")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
+codecov: true
