--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "URIParser"
 uuid = "30578b45-9adc-5946-b283-645ec420af67"
-version = "0.4.1-DEV"
+version = "0.4.1"
 
 [deps]
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
